# tft-ql

./: .gitignore  CLAUDE.md  COMMAND.md  README.md  comp_data.json  launch.sh  pyproject.toml  stop.sh  test.py
config/: champ_aliases.csv  champ_aliases.txt  config.yaml  item_aliases.csv  item_aliases_old.csv  trait_aliases.csv
frontend/tft-frontend/: package-lock.json  package.json
frontend/tft-frontend/public/: index.html
frontend/tft-frontend/src/: App.css  App.tsx  Config.tsx  OpenQLToolModal.tsx  QLTool.tsx  QLToolAliasAdder.tsx  QLToolBIS.tsx  QLToolContainer.tsx  QLToolHome.tsx  QLToolOpen.tsx  QLToolRaw.tsx  QLToolSplit.tsx  QLToolStreamer.tsx  QLToolTop.tsx  QLToolTopComp.tsx  QLToolbar.tsx  SessionData.tsx  TftSet.tsx  Workspace.tsx  index.tsx
frontend/tft-frontend/src/tools/: QLToolAliasAdder.tsx  QLToolBIS.tsx  QLToolHome.tsx  QLToolRaw.tsx  QLToolStreamer.tsx  QLToolTopComp.tsx
notebooks/: justin.ipynb  playground.ipynb  research.ipynb
patch notes/: codebase-summary.md
res/: morg.json  set_data.json
scripts/: create_sessions.py  insert_aliases.py  new_aliases.py  sync_config.py
tft/: config.py
tft/client/: meta.py
tft/interpreter/: core.py  server.py  validation.py
tft/interpreter/commands/: api.py  best_in_slot.py  best_items.py  comp.py  craft.py  early.py  help.py  match.py  registry.py  simple.py  top.py  trait.py  warm.py
tft/ql/: README.md  coerce.py  expr.py  table.py  util.py
tft/queries/: aliases.py  augs.py  champs.py  comp_traits.py  comps.py  items.py  traits.py
