[tool.poetry]
name = "tft"
version = "0.1.0"
description = ""
authors = ["Dima Gutnik <dima.gutnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
attrs = "^24.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
