[tool.poetry]
name = "tft"
version = "0.1.0"
description = ""
authors = ["Dima Gutnik <dima.gutnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
attrs = "^24.2.0"
pandas = "^2.2.2"
boto3 = "^1.35.13"
fastapi = "^0.115.4"
flask = "^3.0.3"
flask-cors = "^5.0.0"
pymongo = "^4.11.1"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
